--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,6 +1,3 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
 name: Go
 
 on:
@@ -10,11 +7,26 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04  # Use a faster runner
     steps:
     - uses: actions/checkout@v4
+
+    - name: Cache Go modules
+      uses: actions/cache@v3
+      with:
+        path: ~/go/pkg/mod
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        restore-keys: |
+          ${{ runner.os }}-go-
+
+    - name: Cache Go Build
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/go-build
+        key: ${{ runner.os }}-gobuild-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-gobuild-
 
     - name: Set up Go
       uses: actions/setup-go@v4
@@ -23,6 +35,3 @@ jobs:
 
     - name: Build
       run: go build -v ./...
-
-    # - name: Test
-    #   run: go test -v ./...
